# volumizer_cli

./: README.md  pyproject.toml
cli/: analysis.py  constants.py  paths.py  pdb.py  rcsb.py  utils.py
data/example_run_40id/: IDs_10k_res_1k_chain.txt  IDs_10k_res_1k_chain_8_repeat_2_unique.txt  IDs_10k_res_1k_chain_8_repeat_2_unique_50_helix.txt  final_selected.txt
data/rcsb_clusters/: cluster-center-ids-40.txt
scripts/: volumize.py
scripts/filtering/: get_pdbs_by_metrics.py  get_pdbs_by_secondary_structure.py  get_pdbs_by_size.py  get_pdbs_by_stoichiometry.py
scripts/utils/: rcsb_cluster_to_ids.py
