[tool.poetry]
name = "volumizer_cli"
version = "0.1.0"
description = "Search the RCSB for occluded volumes like: cavities, pockets, and pores."
authors = ["Aron Broom <broomsday@gmail.com>"]
packages = [{include = "cli"}]


[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
